kubernetes/apps/agents/herdr/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: herdr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: herdr
  ingress:
    # Browser terminal is only reachable through the internal Traefik (Authentik in front)
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            app.kubernetes.io/instance: traefik-internal-network
      toPorts:
        - ports:
            - port: "7681"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # Internet over TCP only: no home network, other pods, nodes or the Kubernetes API
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
      toPorts:
        - ports:
            - port: "1"
              endPort: 65535
              protocol: TCP
